@@ -3,10 +3,10 @@ version = 1.220
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
-copyright_year = 2010
+copyright_year = 2011
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.227
+Config::Model    = 1.228
 Log::Log4perl   = 0
 Config::Model::TkUI = 1.210
 Pod::POM        = 0
