@@ -1,7 +1,9 @@
-        * CommonElement: added warn_message parameter
+ 2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.220
+
+       * CommonElement: added warn* parameters 
+          (require Config::Model 1.228)
         * Fix class deletion issue
         * Adapted model and test to new style of accept specification
-          (require Config::Model 1.227)
 
 2010-10-15 Dominique Dumont  <domi.dumont@free.fr> 1.219
 
